--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <link rel="stylesheet" type="text/css" href="css/medias.css">
+  <!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
+  <link rel="stylesheet" type="text/css" href="css/estilos.css">
+  <!-- <link rel="stylesheet" type="text/css" href="css/medias.css"> -->
   <link rel="shortcut icon" href="assets/favicon.ico">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
   <script src="https://kit.fontawesome.com/46583ded3b.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> <!-- LIVE SERVER -->
@@ -15,7 +17,7 @@
 </head>
 <body>
 	<nav class="navbar">
-      <div class="container">
+      <div class="containers">
         <div class="navbar__logo">
           <p class="navbar__title">
             <a href="#">Victor Osinaga</a>
