--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/estilos.css">
   <link rel="shortcut icon" href="assets/favicon.ico">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/46583ded3b.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> <!-- LIVE SERVER -->
@@ -160,13 +160,11 @@
             </p>
           </div>
           <div class="services__item col-12 col-md-4 col-lg-4 mb-1">
-            <div class="col-11">
               <i class="fas fa-crosshairs"></i>
               <h3>SEO</h3>
               <p>
                 Implementación estrategia de optimización para motores de búsqueda con el objetivo de atraer potenciales clientes.
               </p>
-            </div>
           </div>
         </div>
       </div>
@@ -180,7 +178,7 @@
         <h3 class="section__subtitle">Mis mejores proyectos</h3>
         <div class="bg-white">
           <div class="row row-cols-3">
-            <div class="portfolio__item col-12 col-sm-6 col-md-4">
+            <div class="portfolio__item col-12 col-sm-6 col-md-6 col-lg-4">
               <picture>
               <source srcset="assets/bg-ig.png" type="image/jpeg">
               <img class="portfolio__img" alt="item portfolio">
@@ -210,7 +208,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 portfolio__item">
+            <div class="portfolio__item col-12 col-sm-6 col-md-6 col-lg-4">
               <picture>
                 <source srcset="assets/bg-ig.png" type="image/jpeg">
                 <img class="portfolio__img" alt="item portfolio">
@@ -241,7 +239,7 @@
               </div>
             </div>
             
-            <div class="col-12 col-sm-6 col-md-4 portfolio__item">
+            <div class="portfolio__item col-12 col-sm-6 col-md-6 col-lg-4">
               <picture>
                 <source srcset="assets/bg-ig.png" type="image/jpeg">
                 <img class="portfolio__img" alt="item portfolio">
@@ -271,7 +269,7 @@
               </div>
             </div>
             
-            <div class="col-12 col-sm-6 col-md-4 portfolio__item">
+            <div class="portfolio__item col-12 col-sm-6 col-md-6 col-lg-4">
               <picture>
                   <source srcset="assets/bg-ig.png" type="image/jpeg">
                   <img class="portfolio__img" alt="item portfolio">
@@ -302,7 +300,7 @@
               </div>
             </div>
   
-            <div class="col-12 col-sm-6 col-md-4 portfolio__item">
+            <div class="portfolio__item col-12 col-sm-6 col-md-6 col-lg-4">
               <picture>
                 <source srcset="assets/bg-ig.png" type="image/jpeg">
                   <img class="portfolio__img" alt="item portfolio">
@@ -328,7 +326,7 @@
               </div>
             </div>
   
-            <div class="col-12 col-sm-6 col-md-4 portfolio__item">
+            <div class="portfolio__item col-12 col-sm-6 col-md-6 col-lg-4">
               <picture>
                 <source srcset="assets/bg-ig.png" type="image/jpeg">
                 <img class="portfolio__img" alt="item portfolio">
